--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.4.9",
