--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@styled-icons/material-outlined": "^10.34.0",
+    "@styled-icons/remix-fill": "^10.18.0",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
