--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@styled-icons/remix-fill": "^10.18.0",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
+    "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
