--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
-    "styled-media-query": "^2.1.2"
+    "styled-media-query": "^2.1.2",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.4.9",
